// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when building association subclass with invalid trailing text should have extraneous input error 1`] = `
Array [
  "extraneous input 'TrailingText' expecting {'Abstract Entity', 'Association', 'End Namespace', 'Choice', 'Common', 'Descriptor', 'Domain', 'Domain Entity', 'Enumeration', 'Interchange', 'Inline Common', 'Shared Decimal', 'Shared Integer', 'Shared Short', 'Shared String', 'Subdomain'}, column: 0, line: 9, token: TrailingText",
]
`;

exports[`when building association subclass with lowercase association subclass name should have no viable alternative error 1`] = `
Array [
  "no viable alternative at input 'Associationentity', column: 14, line: 2, token: entity",
]
`;

exports[`when building association subclass with lowercase based on name should have extraneous input error 1`] = `
Array [
  "extraneous input 'base' expecting ID, column: 34, line: 2, token: base",
]
`;

exports[`when building association subclass with no association subclass name should have no viable alternative error 1`] = `
Array [
  "no viable alternative at input 'Associationbased on', column: 15, line: 2, token: based on",
]
`;

exports[`when building association subclass with no based on name should have missing id error 1`] = `
Array [
  "missing ID at 'documentation', column: 4, line: 3, token: documentation",
]
`;

exports[`when building association subclass with no documentation should have mismatched input error 1`] = `
Array [
  "mismatched input 'integer' expecting {'documentation', METAED_ID}, column: 4, line: 3, token: integer",
]
`;

exports[`when building association subclass with no property should have mismatched input error 1`] = `
Array [
  "mismatched input 'End Namespace' expecting {'association', 'bool', 'choice', 'common', 'common extension', 'currency', 'date', 'decimal', 'descriptor', 'domain entity', 'duration', 'enumeration', 'inline common', 'integer', 'percent', 'shared decimal', 'shared integer', 'shared short', 'shared string', 'short', 'string', 'time', 'year'}, column: 0, line: 5, token: End Namespace",
]
`;
